[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/Items/button1.png" type="Texture" id=1]
[ext_resource path="res://Assets/Items/button2.png" type="Texture" id=2]
[ext_resource path="res://button.gd" type="Script" id=3]
[ext_resource path="res://Assets/Sounds/button.wav" type="AudioStream" id=4]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "pressed",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 3.26509
height = 41.2972

[node name="button" type="Area2D"]
collision_layer = 16
collision_mask = 9
script = ExtResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.793701, 24.9777 )
rotation = 1.5708
shape = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.75

[node name="SoundPress" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -5.0
[connection signal="body_entered" from="." to="." method="_on_button_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_button_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
